--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,11 @@
     "start": "npx tsx --env-file .env --watch server.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.3",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
