--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       MONGO_URL: ${MONGO_URL}
       FILE_PATH: ${FILE_PATH}
+      FRONTEND_URL: ${FRONTEND_URL}
     ports:
       - "3000:3000"
+    restart: always
   frontend:
     container_name: video-library-frontend
     image: video-library-frontend
@@ -23,3 +25,4 @@ services:
       VITE_BACKEND_URL: ${VITE_BACKEND_URL}
     ports:
       - "5173:80"
+    restart: always
